# xxbits

./: .gitignore  CMakeLists.txt  LICENSE  graph_legend.html  index.html  navtreedata.js
cmake/: xxbitsInstaller.cmake
docs/: CMakeLists.txt  FRONTMATTER.md
include/xxbits/: version.hxx.in
test/: CMakeLists.txt
